nullaway_error_82527f68-a38a-43d3-916c-a3205d062a79.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/Entity.java:412: error: [NullAway] dereferenced expression this.getEnvironment().getEntitiesByTag().get(tag) is @Nullable
    this.getEnvironment().getEntitiesByTag().get(tag).remove(this);
                                                     ^
    (see http://t.uber.com/nullaway )
